--- a/iocs/visarCameraIOC/visarCameraApp/src/Makefile
+++ b/iocs/visarCameraIOC/visarCameraApp/src/Makefile
@@ -16,6 +16,8 @@ $(PROD_NAME)_DBD += asyn.dbd
 $(PROD_NAME)_DBD += drvAsynSerialPort.dbd
 $(PROD_NAME)_DBD += drvAsynIPPort.dbd
 $(PROD_NAME)_DBD += stream.dbd
+$(PROD_NAME)_DBD += asSupport.dbd
+
 
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
@@ -23,10 +25,12 @@ PROD_SRCS += $(PROD_NAME)_registerRecordDeviceDriver.cpp $(PROD_NAME)Main.cpp
 
 # Add locally compiled object code
 PROD_LIBS += visarCamera
+PROD_LIBS += autosave
 
 $(PROD_NAME)_LIBS += asyn
 $(PROD_NAME)_LIBS += stream
 $(PROD_NAME)_LIBS += $(EPICS_BASE_IOC_LIBS)
+
 
 include $(ADCORE)/ADApp/commonDriverMakefile
 
